--- a/css/style-overlay.css
+++ b/css/style-overlay.css
@@ -4,7 +4,7 @@
   height: 0%;
   width: 100%;
   position: fixed; /* Stay in place */
-  z-index: 2; /* Sit on top */
+  z-index: 97; /* Sit on top */
   left: 0;
   top: 0;
   background-color: rgb(0, 0, 0); /* Black fallback color */
