--- a/css/style.css
+++ b/css/style.css
@@ -415,7 +415,7 @@ hr.new1 {
   position: fixed; /* Fixed/sticky position */
   bottom: 20px; /* Place the button at the bottom of the page */
   right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
+  z-index: 96; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: solid var(--secondary-color) thin; /* Remove outline */
   background-color: transparent; /* Set a background color */
